# cosmological_models

./: CMakeLists.txt  README.md  config.ini
cmake/: FindArmadillo.cmake  FindGSL.cmake
data/: SCPUnion2.1_mu_vs_z_modified.txt
inc/: CosmologicalModel.hpp  LambdaCDM.hpp  SigmaCDM.hpp  mcmc.hpp  rkck.hpp  utils.hpp
postprocess/: chisq_sigmaCDM.py  multiplot.py  pdf_utils.py  read_cpp_hdf5.py  run_kut5.py
src/: CosmologicalModel.cpp  LambdaCDM.cpp  SigmaCDM.cpp  chisq.cpp  main.cpp  utils.cpp
test/: testLambdaCDM.cpp  testSigmaCDM.cpp
utils/: GslSpline.cpp
